--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/bootstrap-guides.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Title</title>
+    <title>index</title>
 </head>
     
 
-<body class="bg-dark">
+<body class="bg-light">
     <div class="d-flex flex-column wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom border-white shadow-sm mb-3">
             <div class="container">
