--- a/quemsomos.html
+++ b/quemsomos.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/bootstrap-guides.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>base</title>
+    <title>Quem Somos</title>
 </head>
     
 
-<body class="bg-dark">
+<body class="bg-light">
     <div class="d-flex flex-column wrapper">
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom border-white shadow-sm mb-3">
             <div class="container">
@@ -56,6 +56,11 @@
 
         <main class="flex-fill">
             <div class="container">
+                <h1>Quem Somos</h1>
+                <hr>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptates similique iure? Asperiores repudiandae veritatis esse praesentium sequi vel, rem ratione architecto expedita quidem porro temporibus soluta quaerat. Magnam, ratione?
+                </p>
 
             </div>
         </main>
