--- a/recuperarsenha.html
+++ b/recuperarsenha.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/bootstrap-guides.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>base</title>
+    <title>Recuperação de Senha</title>
 </head>
     
 
@@ -57,7 +57,15 @@
         <main class="flex-fill">
             <div class="container">
                 <form action="">
+                    <h1>Recuperação de Senha</h1>
+                    <label for="txtEmail">E-mail</label>
+                    <input type="email" id="txtEmail">
+                    <button type="button" onclick="window.location.href='/ confirmrecupsenha.html'">Recuperar Senha</button>
 
+                    <p>
+                        Ainda não é cadastrado? <a href="/cadastro.html">Clique Aqui</a>
+                    </p>
+                    
                 </form>
             </div>
         </main>
