--- a/confirmrecupsenha.html
+++ b/confirmrecupsenha.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/bootstrap-guides.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Recuperação de Senha</title>
+    <title>Instruções Enviadas</title>
 </head>
     
 
@@ -56,20 +56,24 @@
 
         <main class="flex-fill">
             <div class="container">
-                <div class="row justify-content-center">
-                    <form class="col-sm-10 col-md-8 col-lg-6">
-                        <h1>Recuperação de Senha</h1>
-                        <div class="form-floating mb-3">
-                            <input type="email" id="txtEmail" class="form-control" placeholder=" " autofocus>
-                            <label for="txtEmail">E-mail</label>
-                        </div>
-                            
-                        <button type="button" onclick="window.location.href='/confirmrecupsenha.html'" class="btn btn-lg btn-danger">Recuperar Senha</button>
-                            <p class="mt-3">
-                            Ainda não é cadastrado? <a href="/cadastro.html">Clique Aqui</a>
-                            </p>
-                    </form>
-                </div>    
+                <h1>Nova Senha Cadastrada!</h1>
+                <hr>
+                <p>
+                    Caro cliente,
+                </p>
+                <p>
+                    Sua nova senha foi cadastrada com sucesso. Para entrar em sua área restrita agora mesmo, <a href="/login.html">clique aqui</a>.
+                </p>
+                <p>
+                    Agradecemos pela confiança em nossos serviços.
+                </p>
+                <p>
+                    Cordialmente,<br>
+                    Central de Relacionamento Quitanda Online
+                </p>
+                <p>
+                    <a href="/index.html" class="btn btn-lg btn-danger">Voltar à Página Principal</a>
+                </p>
             </div>
         </main>
 
