--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/bootstrap-guides.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Recuperação de Senha</title>
+    <title>Login</title>
 </head>
     
 
@@ -58,18 +58,38 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <form class="col-sm-10 col-md-8 col-lg-6">
-                        <h1>Recuperação de Senha</h1>
+                        <h1>Identifique-se, por favor</h1>
+
                         <div class="form-floating mb-3">
                             <input type="email" id="txtEmail" class="form-control" placeholder=" " autofocus>
                             <label for="txtEmail">E-mail</label>
                         </div>
-                            
-                        <button type="button" onclick="window.location.href='/confirmrecupsenha.html'" class="btn btn-lg btn-danger">Recuperar Senha</button>
-                            <p class="mt-3">
-                            Ainda não é cadastrado? <a href="/cadastro.html">Clique Aqui</a>
-                            </p>
+
+                        <div class="form-floating mb-3">
+                            <input type="password" id="txtSenha" class="form-control" placeholder=" ">
+                            <label for="txtSenha">Senha</label>
+                        </div>
+
+                        <div class="form-check mb-3">
+                            <input type="checkbox" class="form-check-input" value="" id="chkLembrar">
+                            <label for="chkLembrar" class="form-check-label">Lembrar de mim</label>
+                        </div>
+
+                        <button type="button" onclick="window.location.href='/cliente_pedidos.html'"
+                            class="btn btn-lg btn-danger">Entrar</button>
+
+                        <p class="mt-3">
+                            Ainda não é cadastrado? <a href="/cadastro.html">Clique aqui</a> para se cadastrar.
+                        </p>
+
+                        <p class="mt-3">
+                            Esqueceu sua senha? <a href="/recuperarsenha.html">Clique aqui</a> para recuperá-la.
+                        </p>
                     </form>
-                </div>    
+                </div>
+
+
+                </form>
             </div>
         </main>
 
